Fixed on smaller screens.

--- a/css/colors.css
+++ b/css/colors.css
@@ -8,10 +8,11 @@
   --color-brand-darkest: #7a2611;
 
   --color-brown: #544f4e;
+  --color-brown-medium: #f5f0eb;
+  --color-brown-offwhite: #fcf8f4;
   --color-brown-lightest: #f7f3ef;
   --color-brown-lighter: #f0eae4;
   --color-brown-light: #dbd3cc;
-  --color-brown-medium: #948778;
   --color-brown-dark: #2e2b2b;
 }
 
